# report-rpm-facts

./: .dir-locals.el  README.md  meson.build  report-rpm-facts.c
src/report-package-facts/: main.c  report-packages.c  report-packages.h
src/shared/: common.c  common.h  facts.c  facts.h  metrics.c  metrics.h  varlink-io.systemd.Facts.c  varlink-io.systemd.Facts.h  varlink-io.systemd.Metrics.h
units/: meson.build  report-package-facts.socket  report-package-facts@.service.in
